# advent-of-code

./: .gitignore  .hspec  aoc.cabal
common/: Common.hs
common/common/: RefMonad.hs  Table.hs
common/tests/: MainSpec.hs
y2021/d1/: Main.hs
y2021/d2/: Main.hs
y2021/d3/: Main.hs  Solutions.hs
y2021/d3/tests/: MainSpec.hs
y2021/d4/: Model.hs  Parser.hs  Solutions.hs
y2021/d4/Model/: Board.hs  Cell.hs  Game.hs
y2021/d4/tests/: ModelSpec.hs  ParserSpec.hs
y2023/d1/: Main.hs
y2023/d2/: Main.hs
y2023/d21/: Main.hs  Model.hs  Parsers.hs
y2023/d25/: Main.hs
y2023/d3/: Main.hs
y2023/d4/: Main.hs
y2024/common/AoC/: Common.hs
y2024/common/AoC/Data/: Table.hs
y2024/d1/: D1.hs
y2024/d2/: D2.hs
y2024/d3/: D3.hs
y2024/d4/: D4.hs  Model.hs  Parser.hs
