cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Volodymyr Kobeliatsky
maintainer:         vladimir.obeliatsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
  build-depends:
    , base        ^>=4.17.2.0
    , text
    , conduit
    , containers
    , mtl
    , parsec
    , vector

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wno-unused-do-bind -Wno-type-defaults

  default-language: Haskell2010

common test-deps
  import:             deps
  build-depends:
    , common
    , hspec

  build-tool-depends: hspec-discover:hspec-discover -any

library common
  import:          deps
  hs-source-dirs:  common
  exposed-modules:  Common
                  , Common.RefMonad
                  , Common.Table

test-suite common-test
  import:         test-deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: common/tests
  main-is:        MainSpec.hs

executable y2021-d1
  import:         deps
  hs-source-dirs: y2021/d1
  main-is:        Main.hs
  build-depends:  common

executable y2021-d2
  import:         deps
  hs-source-dirs: y2021/d2
  main-is:        Main.hs
  build-depends:  common

library y2021-d3
  import:          deps
  hs-source-dirs:  y2021/d3
  exposed-modules: Solutions
  build-depends:   common

test-suite y2021-d3-test
  import:         test-deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: y2021/d3/tests
  main-is:        MainSpec.hs
  build-depends:  y2021-d3

library y2021-d4
  import:          deps
  hs-source-dirs:  y2021/d4
  exposed-modules:
    Model.Board
    Model.Cell
    Model.Game
    Parser
    Solutions

  build-depends:   common

test-suite y2021-d4-test
  import:         test-deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: y2021/d4/tests
  main-is:        Spec.hs
  build-depends:  y2021-d4
  other-modules:
    ModelSpec
    ParserSpec


executable y2023-d1
  import:         deps
  hs-source-dirs: y2023/d1
  main-is:        Main.hs
  build-depends:  common

executable y2023-d2
  import:         deps
  hs-source-dirs: y2023/d2
  main-is:        Main.hs
  build-depends:  common

executable y2023-d3
  import:         deps
  hs-source-dirs: y2023/d3
  main-is:        Main.hs
  build-depends:  common

executable y2023-d4
  import:         deps
  hs-source-dirs: y2023/d4
  main-is:        Main.hs
  build-depends:  common

executable y2023-d21
  import:         deps
  hs-source-dirs: y2023/d21
  main-is:        Main.hs
  other-modules:  Parsers
                , Model
  build-depends:  common

executable y2023-d25
  import:         deps
  hs-source-dirs: y2023/d25
  main-is:        Main.hs
  build-depends:  common

library y2024-d1
  hs-source-dirs: y2024/d1
  default-language: GHC2021
  exposed-modules:
    D1
  build-depends:  base
                , parsec
                , containers

library y2024-d2
  hs-source-dirs: y2024/d2
  default-language: GHC2021
  exposed-modules:
    D2
  build-depends:  base
                , parsec

library y2024-d3
  hs-source-dirs: y2024/d3
  default-language: GHC2021
  exposed-modules:
    D3
  build-depends:  base
                , parsec